--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>9.5.0</version>
 		</dependency>
+		<!-- H2 Database para testes sem MySQL -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
