--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Desabilita Liquibase (não temos changelog configurado)
+spring.liquibase.enabled=false
+
+# Desabilita segurança do Spring Security para desenvolvimento
+spring.security.user.name=user
+spring.security.user.password=password
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
