--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.4",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
