--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -76,6 +76,12 @@
 			<artifactId>multiapps-controller-persistence</artifactId>
 			<version>1.193.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 
