--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,22 @@
 spring.application.name=demo
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mapa_social_db?serverTimezone=UTC
-spring.datasource.username=root
+# H2 Database (em memória - dados perdem ao reiniciar)
+spring.datasource.url=jdbc:h2:mem:mapasocialdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configurações JPA
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-# Disable Liquibase changelog requirement for local dev (no changelog file present)
 spring.liquibase.enabled=false
+
+# DESCOMENTE ABAIXO QUANDO TIVER BANCO NA NUVEM:
+# spring.datasource.url=jdbc:mysql://SEU_HOST:3306/mapa_social_db?serverTimezone=UTC
+# spring.datasource.username=seu_usuario
+# spring.datasource.password=sua_senha
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
