--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.liquibase.enabled=false
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 # DESCOMENTE ABAIXO QUANDO TIVER BANCO NA NUVEM:
 # spring.datasource.url=jdbc:mysql://SEU_HOST:3306/mapa_social_db?serverTimezone=UTC
