--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,28 @@
 spring.application.name=demo
 
-# H2 Database (em memória - dados perdem ao reiniciar)
+# Porta dinâmica (Railway define PORT). Local fallback 8080
+server.port=${PORT:8080}
+
+# ===================== PERFIL DEFAULT (PostgreSQL em Railway) =====================
+# Railway expõe variáveis: PGHOST, PGPORT, PGDATABASE, PGUSER, PGPASSWORD
+spring.datasource.url=jdbc:postgresql://${PGHOST:${DB_HOST:localhost}}:${PGPORT:${DB_PORT:5432}}/${PGDATABASE:${DB_NAME:mapasocial}}
+spring.datasource.username=${PGUSER:${DB_USER:postgres}}
+spring.datasource.password=${PGPASSWORD:${DB_PASSWORD:password}}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=validate   # Usar validate junto com Flyway baseline.
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Flyway (desativado até criar scripts)
+spring.flyway.enabled=true
+
+# ===================== H2 (DESENVOLVIMENTO LOCAL OPCIONAL) =====================
+# Para usar H2 local, execute com perfil: --spring.profiles.active=h2
+
+spring.config.activate.on-profile=h2
 spring.datasource.url=jdbc:h2:mem:mapasocialdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -8,17 +30,4 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-# Configurações JPA
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.liquibase.enabled=false
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-
-# DESCOMENTE ABAIXO QUANDO TIVER BANCO NA NUVEM:
-# spring.datasource.url=jdbc:mysql://SEU_HOST:3306/mapa_social_db?serverTimezone=UTC
-# spring.datasource.username=seu_usuario
-# spring.datasource.password=sua_senha
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
