Fix: temporário ddl-auto update p/ primeiro deploy Railway

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=validate   # Usar validate junto com Flyway baseline.
+spring.jpa.hibernate.ddl-auto=update   # Primeiro deploy: update. Depois trocar para validate + Flyway.
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Flyway (desativado até criar scripts)
-spring.flyway.enabled=true
+# Flyway (habilitar após primeiro deploy bem-sucedido)
+spring.flyway.enabled=false
 
 # ===================== H2 (DESENVOLVIMENTO LOCAL OPCIONAL) =====================
 # Para usar H2 local, execute com perfil: --spring.profiles.active=h2
