Fix: desabilitar Liquibase (usando Flyway)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # Flyway (habilitar após primeiro deploy bem-sucedido)
 spring.flyway.enabled=false
 
+# Liquibase (desabilitar - usando Flyway)
+spring.liquibase.enabled=false
+
 # ===================== H2 (DESENVOLVIMENTO LOCAL OPCIONAL) =====================
 # Para usar H2 local, execute com perfil: --spring.profiles.active=h2
 
