Fix: usar DATABASE_URL do Railway Postgres

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,10 +4,11 @@ spring.application.name=demo
 server.port=${PORT:8080}
 
 # ===================== PERFIL DEFAULT (PostgreSQL em Railway) =====================
-# Railway expõe variáveis: PGHOST, PGPORT, PGDATABASE, PGUSER, PGPASSWORD
-spring.datasource.url=jdbc:postgresql://${PGHOST:${DB_HOST:localhost}}:${PGPORT:${DB_PORT:5432}}/${PGDATABASE:${DB_NAME:mapasocial}}
-spring.datasource.username=${PGUSER:${DB_USER:postgres}}
-spring.datasource.password=${PGPASSWORD:${DB_PASSWORD:password}}
+# Railway expõe DATABASE_URL ou variáveis individuais
+# Prioridade: DATABASE_URL > variáveis individuais > fallback local
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://${PGHOST:${DB_HOST:localhost}}:${PGPORT:${DB_PORT:5432}}/${PGDATABASE:${DB_NAME:mapasocial}}}
+spring.datasource.username=${POSTGRES_USER:${PGUSER:${DB_USER:postgres}}}
+spring.datasource.password=${POSTGRES_PASSWORD:${PGPASSWORD:${DB_PASSWORD:password}}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
